--- a/floppy-files/docker-compose.yml
+++ b/floppy-files/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - "3306:3306"
     networks:
       - net
+    volumes:
+      - mysql-data:/var/lib/mysql
 
   zabbix:
     container_name: container_zabbix_server
@@ -53,3 +55,6 @@ services:
 
 networks:
   net: {}
+
+volumes:
+  mysql-data:
